--- a/1-Schemas/A-entity_record_schema/08_person.yml
+++ b/1-Schemas/A-entity_record_schema/08_person.yml
@@ -6,21 +6,25 @@ type: object
 properties:
 
   employee_number:
+    P3-MVP: true
     type: string
 
   first_name:
+    P3-MVP: true
     type: string
   
   last_name:
     type: string
   
   display_name:
+    P3-MVP: true
     description: Full name displayed (usually a combination of first and last names)
     oneOf:
       - type: null
       - type: string
 
   section:
+    P3-MVP: true
     description: Indicates which section within a division that the person works for
     type: string
     oneOf:
@@ -28,12 +32,14 @@ properties:
       - type: string
 
   unit:
+    P3-MVP: true
     description: Indicates which business-unit within a section that the person works for
     oneOf:
       - type: null
       - type: string
   
   status:
+    P3-MVP: true
     type: string
     enum:
       - active
@@ -41,7 +47,7 @@ properties:
       - departed 
   
   person_roles:
-
+    P3-MVP: true
     description: The role, associated with a certain type of system access, that the person plays in the system. 
     oneOf:
       - type: null
@@ -52,7 +58,7 @@ properties:
   # NOTE: persons' association to trade in documented in the trade object    
 
   qualifications:
-
+    P3-MVP: true
     description: The qualifications that the person gained through training or certification. 
     oneOf:
       - type: null
@@ -79,10 +85,12 @@ properties:
                   format: date
   
   external_contractor:
+    P3-MVP: false
     description: Indicates whether the person is not an employee of the City
     type: boolean
   
   contract:
+    P3-MVP: false
     description: identifies the contracting company that the person works for
     oneOf:
       - type: null
@@ -90,9 +98,8 @@ properties:
         $ref: "./13_service_contract.yml"
   
   contact:
-
+    P3-MVP: true
     properties:
-      
       email_address:
         description: Email address of the person
         type: string
@@ -105,7 +112,9 @@ properties:
   # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
   
   record_retirement_information:
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
