--- a/1-Schemas/A-entity_record_schema/11_warranty.yml
+++ b/1-Schemas/A-entity_record_schema/11_warranty.yml
@@ -6,6 +6,7 @@ type: object
 properties:
   
   ID:
+    P3-MVP: true
     description: the unique identifier for the warranty contract
     type: string  
 
@@ -66,7 +67,9 @@ properties:
 # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
 
   record_retirement_information:
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
