--- a/1-Schemas/A-entity_record_schema/36_work_order_documentation.yml
+++ b/1-Schemas/A-entity_record_schema/36_work_order_documentation.yml
@@ -100,4 +100,5 @@ properties:
 # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
