--- a/1-Schemas/A-entity_record_schema/00_common_definitions.yml
+++ b/1-Schemas/A-entity_record_schema/00_common_definitions.yml
@@ -3,6 +3,8 @@ $schema: "http://json-schema.org/draft-07/schema#"
 title: common properties of all entities
 $id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/A-entity_record_schema/00_common_definitions.yml
   
+# NOTE:
+  # _: This file contains data definitions that are used multiple time, across different data objects. 
 
 definitions:
 
@@ -24,16 +26,7 @@ definitions:
       A rotating item is a trackable item, represented also as an asset in Maximo. When the value of this field is true, we must serialize every instance of the item. This commitment is beyond what we can presently achieve at TW. The more pragmatic starting point considered in 2024 is as follows:
         1) for the initial implementation, specify all items as non-rotating
         2) an non-rotating item definition, containing the mfr, model, and ordering_options, can be associated with any asset, through the the asset's item_product_master_record property.
-        2) in the future, if we wish to convert the non-rotating item definition to a rotating item definition, we would serialize all the assets associated to the item definition, and convert them to rotating assets. 
-    rule_spec:
-      - name: value of .properties."rotating item"
-        spec_ID: 4JKH1tw9gx
-        type: [validation, assertion]
-        specification: |
-          For a given item_x, 
-            the value of item_x.properties."rotating flag" is set to false, for all time 
-        $comment: 
-        status: specified
+        2) in the future, if we wish to convert the non-rotating item definition to a rotating item definition, we would serialize all the assets associated to the item definition, and convert them to rotating assets.
 
   manufacturer_and_model_def:
     type: object
@@ -58,7 +51,7 @@ definitions:
 
 # FAILURE
 
-  failure_code:
+  failure_code_def:
     type: object
     properties:
       code:
@@ -89,7 +82,7 @@ definitions:
           - draft
           - approved
         
-# RESOURCE FOR PLAN AND WORK
+# RESOURCE FOR WORK SPECIFICATIONS
 
   item_requirement_definition:
     properties:
@@ -176,17 +169,18 @@ definitions:
      
       reason_for_retirement:
         read-only: true
-        #note: reason for requirement should be 
+        #note:
+          # _: the reason is intended to be automatically populated  
         oneOf: 
           - type: null
           - type: string
             enum:
-              - "record is a duplicate"
-              - "what record represents is gone"
-              - "what record represents is lost"
-              - "record added by mistake"
-              - "information out-dated"
-              - "information inaccurate"
+              - "record is a duplicate of another"
+              - "what the record represents is gone"
+              - "what the record represents is lost"
+              - "record was added by mistake"
+              - "record information is out-dated"
+              - "record information information inaccurate"
 
       date_of_actual_removal_or_departure:
         description: is the date that the entity referent of the record was removed or had departed
