--- a/1-Schemas/A-entity_record_schema/02_functional-location.yml
+++ b/1-Schemas/A-entity_record_schema/02_functional-location.yml
@@ -7,27 +7,33 @@ type: object
 properties:
 
   ID:
+    P3-MVP: true
     type: string
     description: is the unique ID of the functional-location known as the "tag number" or "entity number" in Avantis's vocabulary. (Avantis is the a WMS).
 
   name:
+    P3-MVP: true
     type: string
     description: is a structured description of the functional-location. 
 
   parent:
+    P3-MVP: true
     $ref: "./02_functional-location.yml"
     description: references the functional-location that is served by the larger asset, which physically subsumes the asset serving this functional-location.
 
   GIS_object_ID:
+    P3-MVP: true
     type: string
-    integration: GIS
+    integration: [GIS]
     description: is unique ID of the GIS record representing the same pumping station, chamber, or ... as this *functional-location* record in Maximo.
   
   class:
+    P3-MVP: true
     $ref: "B-entity_class_object_schema/02_functional-location_classification.md"
     description: denotes the broad types of asset that may play the functional-location (e.g., "breaker functional-location"). It also denotes the useful function provided by an asset in the functional-location to the larger system (e.g., the "tie-breaker functional-location" provides tie-breaking function).
 
   inferred_classes:
+    P3-MVP: false
     oneOf: 
       - type: null
       - type: array
@@ -39,11 +45,13 @@ properties:
     description: indicates the complex classes to which this asset is an instance.
 
   specification_data:
+    P3-MVP: true
     type: object
     $ref: "."
     description: is a set of functional performance specification data. (The applicable specifications are dependent on the definition made in the chosen class.)
   
   functional-location_status:
+    P3-MVP: true
     type: string
     enum:
       - specified
@@ -54,18 +62,19 @@ properties:
       "specified" means the functional-location is conceived and exists in some specification or design documentation; "active" means the necessary supports exist for an asset to serve in the functional-location and function of the asset being utilized; "eliminated" represents a negation of either or both conditions of the active status.
   
   installation_location:
+    P3-MVP: true
     oneOf: 
       - $ref: "./03_space.yml"
       - type: null
     description: refers to the physical-location in which the asset serving the functional-location would be installed.
 
-  service_relations:    
+  service_relations:
+    P3-MVP: false
     description: identifies the asset, by the functional-location it is occupying, that this functional-location is serving. For example, given a motor starter functional-location, the value in this data field identifies the functional-location of the motor controlled by that motor starter.
     oneOf:
     - type: null
     - type: object 
       properties:
-
         serving:
           $ref: "./02_functional-location.yml"
 
@@ -81,48 +90,62 @@ properties:
             $comment: the list is not exhaustive.
 
   service_address_or_coordinate:
-      oneOf: 
-        - $ref: MaximoServiceAddressObject
-        - type: null
-      description: is the geo-coordinate or the nearest street address of the asset.
+    oneOf: 
+      - $ref: MaximoServiceAddressObject
+      - type: null
+    description: is the geo-coordinate or the nearest street address of the asset.
 
 # OWNER, OPERATOR, MAINTAINER GROUP
   
   operator_group:
+    P3-MVP: true
+    description: is the group responsible for the operation of the asset in the functional-location.
     oneOf:
       - type: null 
       - $ref: "./04_org-chart_group.yml"
-    description: group responsible for the operation of the asset in the functional-location.
 
   maintenance_group:
+    P3-MVP: true
+    description: is the group responsible for the overall maintenance of the asset - for example, a unit, work area, or crew.
     oneOf: 
       - type: null
       - $ref: "./04_org-chart_group.yml"
-    description: group responsible for the overall maintenance of the asset - for example, a unit, work area, or crew.
 
   #note:
     # on: the absence of of a owned_by_the_group property for functional-locations
     # content: assets that are occupying a functional-location are presumed to be owned by the City. 
   
   inherit_operator_group_value:
+    P3-MVP: false
     type: boolean
     default_value: true
 
   inherit_operator_group_from_parent:
+    P3-MVP: false
     type: boolean
     default_value: true
 
   inherit_maintenance_group_from_parent:
+    P3-MVP: false    
     type: boolean
     default_value: true
 
-  operational_criticality:
+  criticality:
+    P3-MVP: true
+    description: the overall criticality of an asset 
     oneOf:
       - $ref: "#/definitions/criticalityRatingDef"
       - type: null
-    description: A functional-location bears high operational criticality if the loss of the asset in the functional-location will either reduce throughput or product quality (but not product safety) of the larger system.
+
+  operational_criticality:
+    P3-MVP: false
+    description: functional-location bears high operational criticality if the loss of the asset in the functional-location will either reduce throughput or product quality (but not product safety) of the larger system.
+    oneOf:
+      - $ref: "#/definitions/criticalityRatingDef"
+      - type: null
 
   protective_function_criticality:
+    P3-MVP: false
     oneOf:
       - $ref: "#/definitions/criticalityRatingDef"
       - type: null
@@ -131,9 +154,11 @@ properties:
 # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def" 
 
   record_retirement_information:
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
   
   
@@ -208,4 +233,4 @@ rule_spec:
     #[]RULE EkP5qy5Sxl: If change auditing cannot be turned on, then when a functional-location record status is "eliminated", all the specification in the record's data fields must be frozen.
 
     #[]RULE:
-    # IN COMMON LANGUAGE: At any given time, each functional-location may only have a single asset assigned to it (i.e., associated with the functional-location via the asset's "assigned_to_asset_functional-location" property).
+    # IN COMMON LANGUAGE: At any given time, each functional-location may only have a single asset assigned to it (i.e., associated with the functional-location via the asset's "assigned_to_functional_location" property).
