--- a/1-Schemas/A-entity_record_schema/07_service_item_master.yml
+++ b/1-Schemas/A-entity_record_schema/07_service_item_master.yml
@@ -8,11 +8,11 @@ properties:
   # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
-
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
 
   record_retirement_information:
-    
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
 
 # Rest to be specified in the future
