--- a/1-Schemas/A-entity_record_schema/33_PM.yml
+++ b/1-Schemas/A-entity_record_schema/33_PM.yml
@@ -44,13 +44,13 @@ properties:
     oneOf:
       - type: null
       - type: string
-    read-only: TRUE
+    read-only: true
     comment: This field can be eliminated in the future.
     work_entity_harmonization: WR(x), WO(x), JP(x)
   
   processes_covered_by_PM:
     description: a list of all major process systems covered by the work specified in this PM.
-    read-only: TRUE
+    read-only: true
     oneOf:
       - type: null
       - type: object
@@ -173,13 +173,14 @@ properties:
     $ref: "./00_common_definitions.yml#/definitions/compliance_class"
     work_entity_harmonization: WR(x), WO(_), JP(_)
   
-  
   # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
 
   record_retirement_information:
+    P3-MVP: true
     $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
 
 ##########################################################
