--- a/1-Schemas/B-entity_class_object_schema/01_asset_item_tool_class.yml
+++ b/1-Schemas/B-entity_class_object_schema/01_asset_item_tool_class.yml
@@ -28,5 +28,8 @@ properties:
         status: TBS
     $comment: A false or null value materially mean the same thing. 
 
-
-  
+  defined_class:
+    oneOf: 
+      - type: boolean
+      - type: null
+    description: Indicates a class that is only applicable when certain conditions of operating context and specifications are met.
